--- a/Lekcja21/index.html
+++ b/Lekcja21/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 	<div class="content">
-		<div>Enter your speach here</div>
-		<textarea></textarea>
-		<button>Click ME </button>
+		<div>Enter your speech or other text below <br>
+			to have it returned in a teleprompter.</div>
+		<textarea placeholder="Enter your text here."></textarea>
+		<button>Teleprompt me! </button>
 	</div>
-	<div class="teleport"></div>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
