--- a/Lesson23/index.html
+++ b/Lesson23/index.html
@@ -6,12 +6,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="sec">00</div>
-    <div id="min">00</div>
-    <div id="hour">00</div>
-    <button id="start">Start</button>
-    <button>Stop</button>
-    <button id="reset">Reset</button>
+    <div class="time">
+        <div id="hour">00</div>
+        <div>:</div>
+        <div id="min">00</div>
+        <div>:</div>
+        <div id="sec">00</div>
+    </div>
+
+    <div class="buttons">
+        <button id="start">Start</button>
+        <button id='stop'>Stop</button>
+        <button id="reset">Reset</button>
+    </div>
+
 </body>
 <script src="script.js"></script>
 </html>
